# src/main/resources/openapi-GENERATED.yml
@@ -48,6 +48,43 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TelemetryResponse"
+    get:
+      tags:
+      - telemetry-controller
+      operationId: fetchTelemetry
+      parameters:
+      - name: deviceId
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: since
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
+      - name: end
+        in: query
+        required: false
+        schema:
+          type: string
+          format: date-time
+      - name: tripId
+        in: query
+        required: false
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TelemetryResponse"
   /api/telemetry/vehicle-stats:
     get:
       tags:
@@ -127,47 +164,6 @@ paths:
                 additionalProperties:
                   type: integer
                   format: int32
-  /api/telemetry/range:
-    get:
-      tags:
-      - telemetry-controller
-      operationId: fetchTelemetryGroupedByDrive
-      parameters:
-      - name: deviceId
-        in: query
-        required: true
-        schema:
-          type: string
-      - name: since
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
-      - name: end
-        in: query
-        required: true
-        schema:
-          type: string
-          format: date-time
-      - name: timeBetweenDrivesInSeconds
-        in: query
-        required: false
-        schema:
-          type: integer
-          format: int32
-          default: 600
-      responses:
-        "200":
-          description: OK
-          content:
-            '*/*':
-              schema:
-                type: object
-                additionalProperties:
-                  type: array
-                  items:
-                    $ref: "#/components/schemas/TelemetryResponse"
   /api/telemetry/latest:
     get:
       tags:
@@ -186,6 +182,47 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TelemetryResponse"
+  /api/telemetry/trips:
+    get:
+      tags:
+      - telemetry-controller
+      operationId: fetchTelemetryGroupedByTrip
+      parameters:
+      - name: deviceId
+        in: query
+        required: true
+        schema:
+          type: string
+      - name: since
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      - name: end
+        in: query
+        required: true
+        schema:
+          type: string
+          format: date-time
+      - name: timeBetweenTripsInSeconds
+        in: query
+        required: false
+        schema:
+          type: integer
+          format: int32
+          default: 1800
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                type: object
+                additionalProperties:
+                  type: array
+                  items:
+                    $ref: "#/components/schemas/TelemetryResponse"
   /api/devices:
     get:
       tags:
@@ -243,6 +280,9 @@ components:
           format: uuid
         deviceId:
           type: string
+        tripId:
+          type: string
+          format: uuid
         start_time:
           type: string
           format: date-time
